--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -25,6 +25,12 @@
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button id="addQuoteBtn">Add Quote</button>
   </div>
+  
+  <h2>Import / Export Quotes</h2>
+  <div>
+    <button id="exportQuotesBtn">Export Quotes</button>
+    <input type="file" id="importQuotesInput" />
+  </div>
 
   <script src="script.js"></script>
 </body>
