--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -2,36 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dynamic Quote Generator</title>
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <div>
-    <label for="categorySelect">Select Category:</label>
-    <select id="categorySelect">
-      <option value="all">All</option>
-    </select>
-  </div>
+  <!-- ✅ Filter Quotes Section -->
+  <h2>Filter Quotes</h2>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Other categories added dynamically -->
+  </select>
 
-  <div id="quoteDisplay"></div>
+  <!-- ✅ Display Area -->
+  <div id="quoteDisplay" style="margin: 20px 0; font-size: 1.2em;"></div>
+
+  <!-- ✅ Show New Random Quote -->
   <button id="newQuote">Show New Quote</button>
 
+  <!-- ✅ Add New Quote -->
   <h2>Add a New Quote</h2>
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
     <button id="addQuoteBtn">Add Quote</button>
   </div>
-  
+
+  <!-- ✅ Import / Export -->
   <h2>Import / Export Quotes</h2>
   <div>
     <button id="exportQuotesBtn">Export Quotes</button>
     <input type="file" id="importQuotesInput" />
   </div>
 
+  <!-- ✅ Script -->
   <script src="script.js"></script>
 </body>
 </html>
