--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,6 +8,9 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <div id="syncStatus" style="margin-bottom: 10px; color: green;"></div>
+
+
   <!-- ✅ Filter Quotes Section -->
   <h2>Filter Quotes</h2>
   <select id="categoryFilter" onchange="filterQuotes()">
