Final: Add visible notification UI and sync conflict handling

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,8 +8,8 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- ✅ Server sync and conflict status -->
-  <div id="syncStatus" style="margin-bottom: 10px; font-weight: bold;"></div>
+  <!-- ✅ Visible Notification for Sync/Conflicts -->
+  <div id="notification" style="padding: 10px; margin: 10px 0; font-weight: bold; display: none;"></div>
 
   <!-- ✅ Filter Quotes by Category -->
   <h2>Filter Quotes</h2>
